<resources>
    <string name="app_name">Character Administrator</string>
<<<<<<< HEAD
    <!-- Strings related to login -->
=======

    <!-- Stringhe relative al login -->
>>>>>>> ef4a6b4668e1601248fb4e09fe7c0033cd89e074
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_heroes">Character Administrator</string>
    <string name="title_home">Hero</string>
    <string name="title_pg_list">Character List</string>
    <string name="title_new_pg">Add Character</string>
    <string name="classe">Class</string>
    <string name="race">Race</string>
    <string name="logout">Logout</string>

    <!-- chiavi per le preferences -->
    <string name="SHARED_PREFERENCES_USERNAME">username</string>
    <string name="SHARED_PREFERENCES_EMAIL">email</string>
    <string name="SHARED_PREFERENCES_LOGGEDIN">loggedIn</string>
    <string name="SHARED_PREFERENCES_HEROESLIST">heroesList</string>
    <string name="SHARED_PREFERENCES_HEROSTATISTICS">hero_statistics</string>

    <!-- URL delle servlet -->
<<<<<<< HEAD
    <string name="gestione_hero">http://pw0213443.altervista.org/appREST/character/</string>
    <string name="gestione_utente">http://pw0213443.altervista.org/appREST/user/</string>
=======
    <string name="gestione_hero">http://10.201.51.235:8080/CharacterAdministrator/GestioneHero</string>
    <string name="gestione_utente">http://10.201.51.235:8080/CharacterAdministrator/GestioneUtente</string>

    <!-- Stringhe relative al NewPgFragment e HeroFragment -->
>>>>>>> ef4a6b4668e1601248fb4e09fe7c0033cd89e074
    <string name="name_character">Name character</string>
    <string name="level">Level</string>
    <string name="level_1">1</string>
    <string name="charisma">Charisma</string>
    <string name="constitution">Constitution</string>
    <string name="dexterity">Dexterity</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="points_10">10</string>
    <string name="save_character">Save Character</string>
    <string name="name_new_pg">Name</string>
    <string name="points_new_pg_8">8</string>
    <string name="available_points_new_hero_27">27</string>
</resources>
