<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/heroFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dedGrey"
    tools:context=".fragments.HeroFragment" >

    <ImageView
        android:id="@+id/class_image_view"
        android:layout_width="190dp"
        android:layout_height="407dp"
        app:layout_constraintBottom_toBottomOf="@+id/chaTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/classView"
        app:layout_constraintTop_toTopOf="@+id/strTextView"
        app:layout_constraintVertical_bias="0.347"
        tools:src="@drawable/wizard"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/namePg"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name_character"
            android:inputType="textCapSentences"
            android:textColor="@color/dedText"
            android:textColorHint="@color/dedText"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/levelView"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/level"
            android:textColor="@color/dedText"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/levelPg"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/level_1"
            android:textColor="@color/dedText"
            android:textColorHint="@color/dedText"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <TextView
        android:id="@+id/classView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/classe"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/raceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/raceView" />

    <TextView
        android:id="@+id/raceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/race"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/chaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wisTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/charisma"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wisTextView" />

    <TextView
        android:id="@+id/conTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dexTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/constitution"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dexTextView" />

    <TextView
        android:id="@+id/dexTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/strTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dexterity"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strTextView" />

    <TextView
        android:id="@+id/strTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/strength"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceView" />

    <TextView
        android:id="@+id/intTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/intelligence"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conTextView" />

    <TextView
        android:id="@+id/wisTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/wisdom"
        android:textColor="@color/dedText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intTextView" />

    <EditText
        android:id="@+id/edit_str_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/strTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/strTextView"
        tools:text="10"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edit_dex_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/points_10"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/dexTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/dexTextView"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edit_con_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/points_10"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/conTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/conTextView"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edit_int_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/points_10"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/intTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/intTextView"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edit_wis_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/points_10"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/wisTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/wisTextView"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edit_cha_hero_fragment"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/points_10"
        android:textColor="@color/dedText"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/chaTextView"
        app:layout_constraintEnd_toStartOf="@+id/class_image_view"
        app:layout_constraintStart_toEndOf="@+id/conTextView"
        app:layout_constraintTop_toTopOf="@+id/chaTextView"
        tools:ignore="Autofill,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>